[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["nullqwertyuiop <49110142+nullqwertyuiop@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
