[tool.poetry]
name = "pyCactiSynth"
version = "0.0.0"
description = ""
authors = [
    "ookamitai-P <3271099361@qq.com>",
    "nullqwertyuiop <49110142+nullqwertyuiop@users.noreply.github.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PyQt5 = "^5.15.7"
pydantic = "^1.10.2"
pyworld = "^0.3.0"
scipy = "^1.9.1"
crepe = "^0.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
